--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -50,6 +50,7 @@ import btnPlay from '../assets/button-playstore.svg';
                 src={btnApp.src} 
                 alt="App Store logo" 
                 itemprop="image"
+                loading="lazy"
             />
         </a>
 
