--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import iconPhone from '../assets/icon-phone.svg';
     <div class="wrap">
         <div class="footer__content">
             <div class="footer__col">
-              <img src={logo.src} width="29px" height="32px" alt="E-veselības logotips" itemprop="logo"/>
+              <img src={logo.src} loading="lazy" width="29px" height="32px" alt="E-veselības logotips" itemprop="logo"/>
               <address>
                 Nacionālais veselības dienests<br>
                 Cēsu iela 31 k-3, 6. ieeja, Rīga, LV-1012
@@ -20,7 +20,7 @@ import iconPhone from '../assets/icon-phone.svg';
                     <a href="tel:+37122812313" itemprop="telephone" aria-label="Call E-veselības atbalsta dienests at +371 2281 2313">
                       +371 2281 2313
                     </a>
-                    <img src={iconPhone.src} alt="Telfona ikona"/>
+                    <img src={iconPhone.src} alt="Telfona ikona" loading="lazy"/>
                   </p>
                 </div>
               </div>
