--- a/src/components/Join.astro
+++ b/src/components/Join.astro
@@ -47,6 +47,7 @@ import handImage from '../assets/hand.webp';
                     itemprop="image"
                     width="460px"
                     height="862px"
+                    loading="lazy"
                 />
             </div>
         </div>
