--- a/src/components/News.astro
+++ b/src/components/News.astro
@@ -29,6 +29,7 @@ import mobileImage from '../assets/news-mobile.webp';
                 itemprop="image"
                 width="532px"
                 height="772px"
+                loading="lazy"
             />
         </div>
     </div>
