--- a/src/components/Participants.astro
+++ b/src/components/Participants.astro
@@ -23,7 +23,7 @@ import quotes from '../assets/quotes.svg';
                         <p>Vestibulum hendrerit blandit auctor. Vivamus ex odio, lacinia non nulla id, placerat pharetra tortor.</p>
                     </div>
                     <div class="quote__person">
-                        <img src={profileImage.src} alt="Jānis Līgciemietis portrets" width="48px" height="48px">
+                        <img src={profileImage.src} loading="lazy" alt="Jānis Līgciemietis portrets" width="48px" height="48px">
                         <div class="quote__info">
                             <p class="quote__name">Jānis Līgciemietis</p>
                             <p class="quote__work">Apeirons</p>
