--- a/src/components/Solutions.astro
+++ b/src/components/Solutions.astro
@@ -25,6 +25,7 @@ import iconPerson from '../assets/icon-favorite.svg';
                         width="32" 
                         height="32" 
                         itemprop="image"
+                        loading="lazy"
                     >
                     <div class="solutions__item-content">
                         <h4 itemprop="name">Piekļūstamība</h4>
@@ -40,6 +41,7 @@ import iconPerson from '../assets/icon-favorite.svg';
                         width="32" 
                         height="32" 
                         itemprop="image"
+                        loading="lazy"
                     >
                     <div class="solutions__item-content">
                         <h4 itemprop="name">“Mobilie vispirms” pieeja</h4>
@@ -55,6 +57,7 @@ import iconPerson from '../assets/icon-favorite.svg';
                         width="32" 
                         height="32" 
                         itemprop="image"
+                        loading="lazy"
                     >
                     <div class="solutions__item-content">
                         <h4 itemprop="name">Lietotājcentrēta pieeja</h4>
