--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name=description content="Projekts paredz jaunās paaudzes iedzīvotāju E-veselības portāla prototipa izveidi. Prototips – portāla vīzijas modelis."/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<!-- <meta name="generator" content={Astro.generator} /> -->
 		<title>Jaunā E‑veselības iedzīvotāju portāla prototips</title>
