add sizes for images

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -51,6 +51,8 @@ import btnPlay from '../assets/button-playstore.svg';
                 alt="App Store logo" 
                 itemprop="image"
                 loading="lazy"
+                width="120px"
+                height="40px"
             />
         </a>
 
@@ -69,6 +71,8 @@ import btnPlay from '../assets/button-playstore.svg';
                 src={btnPlay.src} 
                 alt="Google Play logo" 
                 itemprop="image"
+                width="132px"
+                height="40px"
             />
         </a>
     </div>
