--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ import iconPhone from '../assets/icon-phone.svg';
                     <a href="tel:+37122812313" itemprop="telephone" aria-label="Call E-veselības atbalsta dienests at +371 2281 2313">
                       +371 2281 2313
                     </a>
-                    <img src={iconPhone.src} alt="Telfona ikona" loading="lazy"/>
+                    <img src={iconPhone.src} width="16px" height="16px" alt="Telfona ikona" loading="lazy"/>
                   </p>
                 </div>
               </div>
