--- a/src/components/Participants.astro
+++ b/src/components/Participants.astro
@@ -12,7 +12,7 @@ import quotes from '../assets/quotes.svg';
                     <p>Prototipa veidošanai tika uzrunāti vairāki dalībnieki no dažādām organizācijām, ārstniecības iestādēm u.c., lai nodrošinātu visu pušu vajadzību un interešu apzināšanu.</p>
                     <a class="participants__link" href="#" title="Uzrunāto dalībnieku saraksts" target="_blank" rel="noopener noreferrer">
                         Uzrunāto dalībnieku saraksts
-                        <img src={arrowRight.src} alt="Bulta norāda virzienu pa labi"/>
+                        <img src={arrowRight.src} width="16px" height="16px" alt="Bulta norāda virzienu pa labi"/>
                     </a>
                 </div>
             </div>
