--- a/src/components/Solutions.astro
+++ b/src/components/Solutions.astro
@@ -22,8 +22,8 @@ import iconPerson from '../assets/icon-favorite.svg';
                     <img 
                         src={iconA11y.src} 
                         alt="Cilvēka simbols aplī" 
-                        width="32" 
-                        height="32" 
+                        width="32px" 
+                        height="32px" 
                         itemprop="image"
                         loading="lazy"
                     >
@@ -38,8 +38,8 @@ import iconPerson from '../assets/icon-favorite.svg';
                     <img 
                         src={iconMobile.src} 
                         alt="Mobīlais ekrāns ar ķeksīti" 
-                        width="32" 
-                        height="32" 
+                        width="32px" 
+                        height="32px" 
                         itemprop="image"
                         loading="lazy"
                     >
@@ -54,8 +54,8 @@ import iconPerson from '../assets/icon-favorite.svg';
                     <img 
                         src={iconPerson.src} 
                         alt="Cilvēka simbols ar sirdi" 
-                        width="32" 
-                        height="32" 
+                        width="32px" 
+                        height="32px" 
                         itemprop="image"
                         loading="lazy"
                     >
