--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -22,7 +22,7 @@ import notfound from '../assets/404.svg';
     <div class="not-found">
         <div class="wrap">
             <div class="not-found__content">
-                <img src={notfound.src} alt="2 plāksteri salikti krusteniski"/>
+                <img src={notfound.src} width="92px" height="92px" alt="2 plāksteri salikti krusteniski"/>
                 <h2>Lapa nav atrasta</h2>
                 <p>Lapa, kuru meklējat, neeksistē, vai notikusi kāda cita kļūda!</p>
                 <Button 
