--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -28,7 +28,7 @@ import btnPlay from '../assets/button-playstore.svg';
             <meta itemprop="worstRating" content="1" />
             <meta itemprop="bestRating" content="5" />
             <meta itemprop="ratingValue" content="5" />
-            <p itemprop="reviewBody">Šī ir lieliska lietotne, lai apskatītu un rediģētu prototipus! Ļoti ērta un viegli lietojama.</p>
+            <p itemprop="reviewBody" style="display: none;">Šī ir lieliska lietotne, lai apskatītu un rediģētu prototipus! Ļoti ērta un viegli lietojama.</p>
         </div>
         <meta itemprop="datePublished" content="2024-12-13" />
     </div>
