ADd plausible analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@
 		<meta property="og:title"              content="Jaunā E‑veselības iedzīvotāju portāla prototips" />
 		<meta property="og:description"        content="Projekts paredz jaunās paaudzes iedzīvotāju E-veselības portāla prototipa izveidi. Prototips – portāla vīzijas modelis." />
 		<meta property="og:image"              content="/fb-meta.png" />
+		<script defer data-domain="teste.lv" src="https://plausible.io/js/script.hash.outbound-links.js"></script>
 	</head>
 	<body>
 		<slot></slot>
