--- a/src/components/News.astro
+++ b/src/components/News.astro
@@ -48,7 +48,7 @@ import mobileImage from '../assets/news-mobile.webp';
         &__image {
             margin-top: 40px;
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
 
             img {
                 max-width: 310px;
