--- a/src/components/Join.astro
+++ b/src/components/Join.astro
@@ -4,9 +4,9 @@ import Button from "./Button.astro";
 import handImage from '../assets/hand.webp';
 
 ---
-<div class="join" id="prototips" itemscope itemtype="https://schema.org/WebPage">
+<div class="join" itemscope itemtype="https://schema.org/WebPage">
     <div class="wrap">
-        <div class="join__content">
+        <div id="prototips" class="join__content">
             <div class="join__col">
                 <h3 class="join__title title" itemprop="name">Kā iesaistīties?</h3>
                 
