--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Layout from '../layouts/Layout.astro';
 		<News/>
 		<Steps/>
 		<Solutions/>
-		<Participants/>
+		<!-- <Participants/> -->
 		<Description title="Kas ir prototips?" desc="<p>Prototips ir portāla vīzijas modelis - melnraksts. Tas parāda un ļauj notestēt portāla kopējo struktūru, funkcionalitāti un dizaina idejas vēl pirms tiek uzsākta pilnvērtīga izstrāde. Prototips nodrošina iespēju efektīvi plānot un uzlabot risinājumu, samazinot kļūdu un izmaiņu nepieciešamību turpmākajos posmos.</p>"/>
 		<Join/>
 
