added woff2 for performance

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,7 +49,8 @@
 
 	@font-face {
 		font-family: 'Roboto';
-		src: url('../assets/Fonts/Roboto-Regular.woff');
+		src: url('../assets/Fonts/Roboto-Regular.woff2') format('woff2'),
+			url('../assets/Fonts/Roboto-Regular.woff') format('woff');
 		font-weight: 400;
 		font-style: normal;
 		font-display: swap;
@@ -57,7 +58,8 @@
 
 	@font-face {
 		font-family: 'Roboto';
-		src: url('../assets/Fonts/Roboto-Regular.woff');
+		src: url('../assets/Fonts/Roboto-Medium.woff2') format('woff2'),
+			 url('../assets/Fonts/Roboto-Medium.woff') format('woff');
 		font-weight: 500;
 		font-style: normal;
 		font-display: swap;
@@ -65,7 +67,8 @@
 
 	@font-face {
 		font-family: 'Roboto';
-		src: url('../assets/Fonts/Roboto-Bold.woff');
+		src: url('../assets/Fonts/Roboto-Bold.woff2') format('woff2'),
+		url('../assets/Fonts/Roboto-Bold.woff') format('woff');
 		font-weight: 700;
 		font-style: bold;
 		font-display: swap;
@@ -73,7 +76,8 @@
 
 	  @font-face {
 		font-family: 'Roboto';
-		src: url('../assets/Fonts/Roboto-Light.woff');
+		src: url('../assets/Fonts/Roboto-Light.woff2') format('woff2'),
+		url('../assets/Fonts/Roboto-Light.woff') format('woff');
 		font-weight: 300;
 		font-style: normal;
 		font-display: swap;
