--- a/src/components/News.astro
+++ b/src/components/News.astro
@@ -1,6 +1,20 @@
 ---
 import mobileImage from '../assets/news-mobile.webp';
 ---
+<script>
+    // Lazy load images after DOM is fully loaded, avoid from performance issues
+    document.addEventListener('DOMContentLoaded', () => {
+      const lazyImages = document.querySelectorAll<HTMLImageElement>('[data-lazy-src]');
+      lazyImages.forEach((img) => {
+        const lazySrc = img.getAttribute('data-lazy-src');
+        if (lazySrc) {
+          img.setAttribute('src', lazySrc); // Only set if lazySrc is not null
+          img.removeAttribute('data-lazy-src'); // Remove the attribute
+        }
+      });
+    });
+  </script>
+  
 <div class="news" itemscope itemtype="https://schema.org/CreativeWork">
     <div class="wrap">
         <div class="news__content">
@@ -24,7 +38,7 @@ import mobileImage from '../assets/news-mobile.webp';
         <!-- Image with Alt text -->
         <div class="news__image">
             <img 
-                src={mobileImage.src} 
+                data-lazy-src={mobileImage.src} 
                 alt="Mobīlais telefons ar ekrānšāviņu." 
                 itemprop="image"
                 width="532px"
