--- a/src/components/Join.astro
+++ b/src/components/Join.astro
@@ -36,7 +36,7 @@ import handImage from '../assets/hand.webp';
                     label="Skatīt prototipu"
                     title="Atvērt prototipu"
                     classList="button--purple"
-                    link="#prototips"
+                    link="https://www.figma.com/proto/gttC8g7DbpKP6ta1cHReSm/E-vesel%C4%ABba-28nov?page-id=0%3A1&node-id=20315-134334&node-type=frame&viewport=-1918%2C-27878%2C0.5&t=nDBx3YE1z09usAzg-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=20315%3A134334"
                     type="open"
                 />
             </div>
