--- a/src/pages/pieklustamibas-pazinojums.astro
+++ b/src/pages/pieklustamibas-pazinojums.astro
@@ -7,7 +7,50 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
 	<Header link="/#prototips"/>
     <main>
-        sssss
+        <div class="notification">
+            <div class="wrap">
+                <div class="text">
+                    <h1>Heading 1</h1>
+                    <h2>Heading 2</h2>
+                    <h3>Heading 3</h3>
+                    <h4>Heading 4</h4>
+    
+                    <ul>
+                        <li>item 1</li>
+                        <li>item 2</li>
+                        <li>item 2</li>
+                        <li class="sublist">
+                            <ul>
+                                <li>subitem 1</li>
+                                <li>subitem 2</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <p>paragraph 1</p>
+                    <p>paragraph 2</p>
+    
+                    <ol>
+                        <li>item 1</li>
+                        <li>item 2</li>
+                        <li>item 3</li>
+                        <li>item 4 
+                            <ol>
+                                <li>subitem 1</li>
+                                <li>subitem 2</li>
+                            </ol>
+                        </li>
+                    </ol>
+    
+                    <p><a href="#">Random link</a> going</p>
+                </div>
+            </div>
+        </div>
     </main>
     <Footer/>
 </Layout>
+
+<style lang="scss">
+    .notification {
+        padding: 80px 0;
+    }
+</style>
