--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@ import iconPhone from '../assets/icon-phone.svg';
                   </p>
                 </div>
               </div>
-              <a class="footer__link link link--underline" href="/pieklustamibas-pazinojums" title="Iet uz piekļūstamības paziņojuma portālu" target="_blank" rel="noopener noreferrer">Pieklūstamības paziņojums</a>
+              <a class="footer__link link link--underline" href="/pieklustamibas-pazinojums" title="Iet uz piekļūstamības paziņojuma lapu">Pieklūstamības paziņojums</a>
             </div>
         </div>
     </div>
