positioning image on the line

--- a/src/components/News.astro
+++ b/src/components/News.astro
@@ -87,6 +87,9 @@ import mobileImage from '../assets/news-mobile.webp';
                 transform: translateY(-50%);
 
                 img {
+                    // position to positioning it on the line
+                    position: relative;
+                    top: -10px;
                     width: 100%;
                     max-width: inherit;
                 }
