--- a/src/components/social-buttons/AppStore.astro
+++ b/src/components/social-buttons/AppStore.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <a 
-    href="https://apps.apple.com/us/app/figma/id1152747299" 
+    href="https://play.google.com/store/apps/details?id=com.figma.mirror" 
     title="Iet uz App Store portālu, lai lejupielādetu Figma lietotni" 
     target="_blank" 
     rel="noopener noreferrer" 
