--- a/src/pages/uzrunato-dalibnieku-saraksts.astro
+++ b/src/pages/uzrunato-dalibnieku-saraksts.astro
@@ -11,24 +11,19 @@ import { Markdown } from '@astropub/md'
         <div class="notification">
             <div class="wrap">
                 <div class="text">
-                    <Markdown of={`# Heading 1
-## Heading 2
-### Heading 3
-#### Heading 4
-- item 1
-- item 2
-- item 2
-- - subitem 1
-    - subitem 2
-paragraph 1
-paragraph 2
-1. item 1
-2. item 2
-3. item 3
-4. item 4
-    1. subitem 1
-    2. subitem 2
-[Random link](https://www.teste.lv/pieklustamibas-pazinojums/#) going
+                    <Markdown of={`
+# Uzrunāto dalībnieku saraksts
+Biedrības
+- “Latvijas Ģimenes ārstu asociācija”,
+- "Latvijas Lauku ģimenes ārstu asociācija",
+- Onkoloģisko pacientu savstarpējās palīdzības biedrības "Par Dzīvot",
+- pacientu organizācija “Dzīvības koks”,
+- Latvijas Onkoloģijas pacientu organizāciju apvienība "ONKOALIANSE",
+- Apeirons,
+- Sustento,
+- Latvijas pacientu organizāciju tīkls,
+- Latvijas hemofīlijas biedrība.
+
                         
                         `} />
                 </div>
