--- a/src/pages/uzrunato-dalibnieku-saraksts.astro
+++ b/src/pages/uzrunato-dalibnieku-saraksts.astro
@@ -13,7 +13,7 @@ import { Markdown } from '@astropub/md'
                 <div class="text">
                     <Markdown of={`
 # Uzrunāto dalībnieku saraksts
-Biedrības
+## Biedrības
 - “Latvijas Ģimenes ārstu asociācija”,
 - "Latvijas Lauku ģimenes ārstu asociācija",
 - Onkoloģisko pacientu savstarpējās palīdzības biedrības "Par Dzīvot",
