--- a/src/components/Participants.astro
+++ b/src/components/Participants.astro
@@ -10,14 +10,14 @@ import quotes from '../assets/quotes.svg';
                 <h3 class="solutions__title title">Projekta dalībnieki</h3>
                 <div class="participants__desc text">
                     <p>Prototipa veidošanai tika uzrunāti vairāki dalībnieki no dažādām organizācijām, ārstniecības iestādēm u.c., lai nodrošinātu visu pušu vajadzību un interešu apzināšanu.</p>
-                    <a class="participants__link" href="#" title="Uzrunāto dalībnieku saraksts" target="_blank" rel="noopener noreferrer">
+                    <a class="participants__link" href="/uzrunato-dalibnieku-saraksts" title="Uzrunāto dalībnieku saraksts" target="_self" rel="noreferrer">
                         Uzrunāto dalībnieku saraksts
                         <img src={arrowRight.src} width="16px" height="16px" alt="Bulta norāda virzienu pa labi"/>
                     </a>
                 </div>
             </div>
             <div class="participants__col">
-                <div class="quote">
+                <!-- <div class="quote">
                     <div class="quote__content">
                         <img src={quotes.src} alt="Melnas pēdiņas" width="32px" height="32px">
                         <p>Vestibulum hendrerit blandit auctor. Vivamus ex odio, lacinia non nulla id, placerat pharetra tortor.</p>
@@ -29,7 +29,7 @@ import quotes from '../assets/quotes.svg';
                             <p class="quote__work">Apeirons</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
