--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,11 @@ const { link } = Astro.props;
       <!-- Main Navigation Menu -->
       <ul class="header__menu">
         <li>
-          <a class="link" href="https://www.figma.com/proto/gttC8g7DbpKP6ta1cHReSm/E-vesel%C4%ABba-28nov?page-id=0%3A1&node-id=20315-134334&node-type=frame&viewport=-1918%2C-27878%2C0.5&t=nDBx3YE1z09usAzg-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=20315%3A134334" itemprop="name" aria-label="View the prototype section">Atvērt prototipu</a>
+          <a class      = "link"
+             href       = "https://www.figma.com/proto/gttC8g7DbpKP6ta1cHReSm/E-vesel%C4%ABba-28nov?page-id=0%3A1&node-id=20315-134334&node-type=frame&viewport=-1918%2C-27878%2C0.5&t=nDBx3YE1z09usAzg-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=20315%3A134334"
+             itemprop   = "name"
+             aria-label = "Atvērt prototipu jaunā logā"
+             target     = "_blank">Atvērt prototipu</a>
         </li>
       </ul>
     </nav>
