--- a/src/pages/uzrunato-dalibnieku-saraksts.astro
+++ b/src/pages/uzrunato-dalibnieku-saraksts.astro
@@ -14,13 +14,13 @@ import { Markdown } from '@astropub/md'
                     <Markdown of={`
 # Uzrunāto dalībnieku saraksts
 ## Biedrības
-- “Latvijas Ģimenes ārstu asociācija”,
-- "Latvijas Lauku ģimenes ārstu asociācija",
+- Latvijas Ģimenes ārstu asociācija,
+- Latvijas Lauku ģimenes ārstu asociācija,
 - Onkoloģisko pacientu savstarpējās palīdzības biedrības "Par Dzīvot",
-- pacientu organizācija “Dzīvības koks”,
+- Pacientu organizācija “Dzīvības koks”,
 - Latvijas Onkoloģijas pacientu organizāciju apvienība "ONKOALIANSE",
-- Apeirons,
-- Sustento,
+- Invalīdu un viņu draugu apvienība "Apeirons",
+- Latvijas Cilvēku ar īpašām vajadzībām sadarbības organizācija SUSTENTO,
 - Latvijas pacientu organizāciju tīkls,
 - Latvijas hemofīlijas biedrība.
 
