--- a/src/pages/uzrunato-dalibnieku-saraksts.astro
+++ b/src/pages/uzrunato-dalibnieku-saraksts.astro
@@ -21,8 +21,8 @@ import { Markdown } from '@astropub/md'
 - Latvijas Onkoloģijas pacientu organizāciju apvienība "ONKOALIANSE",
 - Invalīdu un viņu draugu apvienība "Apeirons",
 - Latvijas Cilvēku ar īpašām vajadzībām sadarbības organizācija SUSTENTO,
-- Latvijas pacientu organizāciju tīkls,
-- Latvijas hemofīlijas biedrība.
+- Latvijas Pacientu organizāciju tīkls,
+- Latvijas Hemofīlijas biedrība.
 
                         
                         `} />
