--- a/src/components/Join.astro
+++ b/src/components/Join.astro
@@ -63,7 +63,7 @@ import handImage from '../assets/hand.webp';
             <Button
                  classList="button--dark"
                 label="Rakstīt komentāru"
-                link="/"
+                link="https://forms.office.com/Pages/ResponsePage.aspx?id=LQHJ24ti1EOxkIpzD34elnu_pfU188lGiKeuurL-h_1UNE5UU1c3MkJGN1FXS0ZKOFhTWkk5Skg3Uy4u"
                 title="Rakstīt komentāru"
             />
         </div>
