--- a/src/pages/pieklustamibas-pazinojums.astro
+++ b/src/pages/pieklustamibas-pazinojums.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 import { Markdown } from '@astropub/md'
 ---
 
-<Layout>
+<Layout title="Pieklūstamības paziņojums | Jaunā E‑veselības iedzīvotāju portāla prototips">
 	<Header link="/#prototips"/>
     <main>
         <div class="notification">
