add grammar changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import iconPhone from '../assets/icon-phone.svg';
     <div class="wrap">
         <div class="footer__content">
             <div class="footer__col">
-              <img src={logo.src} loading="lazy" width="29px" height="32px" alt="E-veselības logotips" itemprop="logo"/>
+              <img src={logo.src} loading="lazy" width="29px" height="32px" alt="Tīmekļvietnes logotips" itemprop="logo"/>
               <address>
                 Nacionālais veselības dienests<br>
                 Cēsu iela 31 k-3, 6. ieeja, Rīga, LV-1012
@@ -17,10 +17,10 @@ import iconPhone from '../assets/icon-phone.svg';
                 <div itemscope itemtype="https://schema.org/Organization">
                   <p itemprop="name">E-veselības atbalsta dienests</p>
                   <p class="footer__call">
-                    <a href="tel:+37122812313" itemprop="telephone" aria-label="Call E-veselības atbalsta dienests at +371 2281 2313">
-                      +371 2281 2313
+                    <a href="tel:+37122812313" itemprop="telephone" aria-label="Call E-veselības atbalsta dienests at +371 6780 3300">
+                      +371 6780 3300
                     </a>
-                    <img src={iconPhone.src} width="16px" height="16px" alt="Telfona ikona" loading="lazy"/>
+                    <img src={iconPhone.src} width="16px" height="16px" alt="Telefona ikona" loading="lazy"/>
                   </p>
                 </div>
               </div>
