--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const { link } = Astro.props;
     <nav class="header__nav" itemscope itemtype="https://schema.org/SiteNavigationElement" aria-label="Main Navigation">
       <!-- Logo Link -->
       <a class="header__logo" href="/" itemscope itemtype="https://schema.org/Organization" itemprop="url" aria-label="Go to Home">
-        <img src={logo.src} width="29px" height="32px" alt="E-veselības logo" itemprop="logo" />
+        <img src={logo.src} width="29px" height="32px" alt="Tīmekļvietnes logotips" itemprop="logo" />
       </a>
     
       <!-- Main Navigation Menu -->
