--- a/src/components/Join.astro
+++ b/src/components/Join.astro
@@ -43,7 +43,7 @@ import handImage from '../assets/hand.webp';
             <div class="join__col">
                 <img
                     src={handImage.src}
-                    alt="Roka, kas tur telefonu ar piekļuvi jaunajam portālam"
+                    alt="Roka, kas tur telefonu, ar ekrānā redzamu portāla prototipu"
                     itemprop="image"
                     width="460px"
                     height="862px"
