--- a/src/components/News.astro
+++ b/src/components/News.astro
@@ -39,7 +39,7 @@ import mobileImage from '../assets/news-mobile.webp';
         <div class="news__image">
             <img 
                 data-lazy-src={mobileImage.src} 
-                alt="Mobīlais telefons ar ekrānšāviņu." 
+                alt="Mobilais telefons ar ekrānšāviņu no prototipa." 
                 itemprop="image"
                 width="532px"
                 height="772px"
