--- a/src/components/Solutions.astro
+++ b/src/components/Solutions.astro
@@ -37,7 +37,7 @@ import iconPerson from '../assets/icon-favorite.svg';
                 <div class="solutions__item" itemscope itemtype="https://schema.org/Thing">
                     <img 
                         src={iconMobile.src} 
-                        alt="Mobīlais ekrāns ar ķeksīti" 
+                        alt="Mobilais telefons ar ķeksīti" 
                         width="32px" 
                         height="32px" 
                         itemprop="image"
