--- a/src/pages/pieklustamibas-pazinojums.astro
+++ b/src/pages/pieklustamibas-pazinojums.astro
@@ -14,36 +14,44 @@ import { Markdown } from '@astropub/md'
                     <Markdown of={`
 # Pieklūstamības paziņojums
 
-Mēs uzskatām, ka internets ir paredzēts visiem, un tiecamies nodrošināt piekļūstamību ikvienam mūsu tīmekļvietnes apmeklētājam. Mūsu mērķis ir atbilst Eiropas piekļūstamības standartam EN 301 549 v3.2.1 un Latvijas normatīvajos aktos noteiktajām prasībām, cik vien tas iespējams, ņemot vērā mūsu pašreizējos tehniskos un resursu ierobežojumus.
+Nacionālais veselības dienests apņemas veidot savu tīmekļvietni piekļūstamu saskaņā ar Ministru kabineta 2020. gada 14. jūlija noteikumiem Nr. 445 “Kārtība, kādā iestādes ievieto informāciju internetā” (turpmāk – noteikumi Nr. 445).
+Šis piekļūstamības paziņojums attiecas uz Nacionālā veselības dienesta tīmekļvietni – https://www.teste.lv/ 
+Tīmekļvietnei veikts Vienkāršotais izvērtējums. Izmantotā metode – VARAM sagatavotās “Vadlīnijas iestāžu tīmekļvietnēm noteikto piekļūstamības prasību ievērošanas ietekmes izvērtēšanai un nesamērīgā sloga pamatošanai”.
 
 
-## Tīmekļvietnes saturs un prototips
-teste.lv šobrīd piedāvā vienkāršu galveno lapu un saiti uz mūsu topošās e-veselības sistēmas prototipu, kas izstrādāts Figma platformā. Mēs esam īstenojuši vairākus piekļūstamības principus, piemēram: 
-- Pārbaudīta krāsu kontrasta atbilstība minimālajām prasībām  
-- Sakārtota virsrakstu hierarhija, lai atvieglotu satura uztveršanu
 
-Tomēr Figma platformas tehniskie ierobežojumi var radīt situācijas, kurās prototips nav pilnībā piekļūstams visiem lietotājiem, īpaši tiem, kas izmanto ekrāna lasītājus vai citas palīgtehnoloģijas. Šajā prototipa posmā daži elementi var nebūt pilnībā kontrolējami, taču mēs turpinām pilnveidot risinājumus un meklēt alternatīvas, lai uzlabotu piekļūstamību.
+## Cik piekļūstama ir šī tīmekļvietne?
 
-
-## Nepiekļūstamās satura daļas
-- Dažas interaktīvās elementu funkcijas, kas atkarīgas no Figma tehniskajām iespējām  
-- Iespējamas nepilnības navigācijas un tastatūras kontroles jomā prototipā
-
-Mēs cenšamies nepārtraukti uzlabot piekļūstamību, lai nākotnē nodrošinātu labāku pieredzi visiem lietotājiem.
+Šī tīmekļvietne pēdējo reizi tika izvērtēta 16.12.2024. Izvērtēšanu veica SIA Turn Digital.  
+Izvērtējumu apliecinošs dokuments: <a href="/TesteLv-izvertesanas-protokols.pdf" target="_blank" rel="noopener noreferrer">izvērtēšanas protokols</a>.  
+Nacionālā veselības dienesta  tīmekļvietne pilnībā atbilst noteikumiem Nr. 445.  
 
 
-## Saziņa un atsauksmes
-Ja pamanāt kādas problēmas vai nepilnības, kas nav minētas šajā paziņojumā, vai vēlaties saņemt konkrētu saturu citā formātā, lūdzu, sazinieties ar mums:
+## Atsauksmēm un saziņai
 
-E-pasts: peteris.jurcenko@pieklustamiba.lv
+Mēs nepārtraukti cenšamies uzlabot šīs tīmekļvietnes piekļūstamību.  
+Ja Jūs konstatējat kādas problēmas vai nepilnības, kas nav minētas šajā paziņojumā, sazinieties ar mums:  
+E-pasts: peteris.jurcenko@pieklustamiba.lv  
+Tālrunis:+371 28 280 185  
+Mēs izskatīsim Jūsu pieprasījumu un sniegsim atbildi 5 (piecu) darba dienu laikā.  
 
-Jūsu atsauksmes mums ir vērtīgas, un mēs centīsimies atbildēt vai sniegt risinājumu 10 (desmit) darba dienu laikā.
 
 
-## Paziņojuma sagatavošana un pārskatīšana
+## Sūdzību iesniegšana
 
-Šis piekļūstamības paziņojums pirmo reizi tika sagatavots 16.12.2024. Mēs plānojam regulāri to pārskatīt un atjaunināt, lai sekotu līdzi jaunākajām piekļūstamības prasībām un nodrošinātu iespējami iekļaujošu digitālo vidi.
-[Saite uz izvērtējumu](https://www.teste.lv/pieklustamibas-pazinojums/#) going
+E-pasts: irena.vasiljeva@vmnvd.gov.lv   
+Tālrunis: +371 67043789  
+Ja neesam atbilstoši reaģējuši uz Jūsu iesniegumu vai sūdzību par tīmekļvietnes satura piekļūstamību, Jums ir iespēja iesniegt sūdzību Latvijas Republikas Tiesībsargam:  
+
+Tiesībsarga birojs: Baznīcas iela 25 Rīgā, LV-1010  
+Tālrunis: +37167686768  
+E-pasts: tiesibsargs@tiesibsargs.lv  
+
+
+
+## Ziņas par paziņojuma sagatavošanu
+
+Šis paziņojums pirmo reizi tika sagatavots 16.12.2024.
                         
                         `} />
                 </div>
