Change Adress to LDVC

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,8 +8,8 @@ import iconPhone from '../assets/icon-phone.svg';
             <div class="footer__col">
               <img src={logo.src} loading="lazy" width="29px" height="32px" alt="Tīmekļvietnes logotips" itemprop="logo"/>
               <address>
-                Nacionālais veselības dienests<br>
-                Cēsu iela 31 k-3, 6. ieeja, Rīga, LV-1012
+                SIA "Latvijas Digitālās veselības centrs"<br>
+                Brīvības iela 72 k-1, Rīga, LV-1011
               </address>
             </div>
             <div class="footer__col">
